--- a/src/index.css
+++ b/src/index.css
@@ -193,3 +193,30 @@ input[type="color"]{
   border-radius: 10px;
   border: 3px solid hsl(0, 0%, 80%);
 }
+
+.car-object-update{
+  border: 1px;
+  border-radius: 10px;
+  max-width: 200px;
+  background-color: #aabbff;
+  margin: 20px;
+  padding: 40px;
+}
+
+.food-array-update{
+  border: 1px;
+  border-radius: 20px;
+  background-color: aqua;
+  max-width: 200px;
+  margin: 20px;
+  padding: 20px;
+}
+
+.car-array-object-update{
+  border: 1px;
+  border-radius: 20px;
+  background-color: aqua;
+  max-width: 200px;
+  margin: 20px;
+  padding: 20px;
+}
