--- a/src/ColorPicker/ColorPicker.module.css
+++ b/src/ColorPicker/ColorPicker.module.css
@@ -1,4 +1,4 @@
-.color-picker-container{
+.colorPickerContainer{
     border: 1px solid rebeccapurple;
     border-radius: 20px;
     background-color: aliceblue;
@@ -14,7 +14,7 @@
     font-size: 3rem;
   }
   
-  .color-display{
+  .colorDisplay{
     width: 300px;
     height: 300px;
     display: flex;
@@ -26,7 +26,7 @@
     transition: 2.25s ease;
   }
   
-  .color-display p{
+  .colorDisplay p{
     color: hsl(0, 0% 20%);
     font-size: 2rem;
     text-align: center;
@@ -45,3 +45,4 @@
     border-radius: 10px;
     border: 3px solid hsl(0, 0%, 80%);
   }
+  
