--- a/src/ToDoList/ToDoList.module.css
+++ b/src/ToDoList/ToDoList.module.css
@@ -3,6 +3,7 @@
     font-family: Arial, sans-serif;
     text-align: center;
     margin-top: 100px;
+    max-width: 600px;
 }
 .toDoListh1{
     font-size: 0.5rem;
