--- a/src/ToDoList/ToDoList.module.css
+++ b/src/ToDoList/ToDoList.module.css
@@ -1,5 +1,5 @@
 .toDoList{
-    background-color: black;
+    background-color: rgb(0, 8, 121);
     font-family: Arial, sans-serif;
     text-align: center;
     margin-top: 100px;
@@ -44,14 +44,14 @@ input[type="text"]{
     color: hsla(0, 0%, 0%, 0.5);
 }
 .toDoListOl{
-    padding: 0;
+    padding: 20px;
 }
 .toDoListLi{
     font-size: 1.2rem;
     font-weight: bold;
     padding: 5px;
     background-color: hsl(0, 0%, 97%);
-    margin-bottom: 10px;
+    margin-bottom: 40px;
     margin: 20px;
     border: 3px solid hsla(0, 0%, 85%, 0.75);
     border-radius: 5px;
