DigitalClock css elkészítése.

--- a/src/DigitalClock/DigitalClock.module.css
+++ b/src/DigitalClock/DigitalClock.module.css
@@ -1,3 +1,28 @@
 body{
-    background-color: aqua;
+    background-image: url(../assets/BMWM635CSI.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    margin: 0;
+    /*Optional*/
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+    align-items: center;
+}
+
+.clockContainer{
+    backdrop-filter: blur(5px);
+    width: 80vw;
+    padding: 10px 0;
+}
+
+.clock{
+    color: yellowgreen;
+    font-size: 6rem;
+    font-weight: bold;
+    font-family: monospace;
+    text-align: center;
+    text-shadow: 3px 3px 5px hsla(0, 0%, 0%, 0.75);
 }
